tests/invalid/checking_trait.out
tests/invalid/checking_trait.ri:2:18: error: cannot take the address of a boxed value as receiver
    2 |     func to_str1(&self) -> string;
      |                  ^~~~~
tests/invalid/checking_trait.ri:10:5-12:5: error: type `string` incorrectly implements method `to_str1` of trait `checking_trait.ToStr`
      |     /~~ from here
   10 |     func to_str1(self) -> string {
   11 |         return self;
   12 |     }
      |     ^~~ to here
      = note: method `to_str1` should be public.
      = note: ====== method signature for `to_str1` ======
      = note: trait `ToStr` has `func(&self) -> string`
      = note: type `string` has `func(self) -> string`
tests/invalid/checking_trait.ri:16:5-18:5: error: type `bool` incorrectly implements method `to_str1` of trait `checking_trait.ToStr`
      |     /~~ from here
   16 |     func to_str1(&self) -> string {
   17 |         return if self.* { "true" } else { "false" };
   18 |     }
      |     ^~~ to here
      = note: method `to_str1` should be public.
      = note: ====== method signature for `to_str1` ======
      = note: trait `ToStr` has `func(&self) -> string`
      = note: type `bool` has `func(&self) -> string`
tests/invalid/checking_trait.ri:24:14: error: type `int32` does not implement trait `ToStr`
   24 |     my_print(1); // FAIL
      |              ^
      = note: in argument `v` of function `my_print`
rivet: error: could not compile module `checking_trait`, aborting due to 4 previous errors